--- a/app/src/main/res/layout/activity_registro_view.xml
+++ b/app/src/main/res/layout/activity_registro_view.xml
@@ -15,84 +15,104 @@
         android:background="#CFC9C9"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView17"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView17"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:text="@string/txvIntroduceElNombreyApellido"
+                    android:textColor="#03A9F4"
+                    android:textSize="14dp" />
+
+                <EditText
+
+                    android:id="@+id/editTextNombreyApellido"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="20dp"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:textSize="14dp" />
+            </LinearLayout>
+
+
+
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal">
+           <TextView
+               android:id="@+id/textView2"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginBottom="20dp"
+               android:layout_marginTop="20dp"
+               android:layout_marginLeft="5dp"
+               android:layout_marginRight="5dp"
+               android:text="@string/txvIntroduceElCorreo"
+               android:textColor="#03A9F4"
+               android:textSize="14dp" />
+
+           <EditText
+
+               android:id="@+id/editTextCorreoElectronico"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_marginLeft="5dp"
+               android:layout_marginTop="20dp"
+               android:layout_marginRight="5dp"
+               android:layout_marginBottom="20dp"
+               android:ems="10"
+               android:inputType="textPersonName"
+               android:textSize="14dp" />
+       </LinearLayout>
+
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:gravity="center"
-            android:text="@string/txvIntroduceElNombreyApellido"
-            android:textColor="#03A9F4"
-            android:textSize="20sp" />
+            android:orientation="horizontal">
 
-        <EditText
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="15dp"
+                android:gravity="center"
+                android:text="@string/txvIntroduceLaContraseña"
+                android:textColor="#2196F3"
+                android:textSize="14dp" />
 
-            android:id="@+id/editTextNombreyApellido"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="15dp"
-            android:ems="10"
-            android:hint="@string/txvIntroduceElNombreyApellido"
-            android:inputType="textPersonName"
-            android:textSize="20sp" />
+            <EditText
+                android:id="@+id/editTextContraseña"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"
+                android:ems="10"
+                android:gravity="start|top"
+                android:inputType="textMultiLine"
+                android:textSize="14dp" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:gravity="center"
-            android:text="@string/txvIntroduceElCorreo"
-            android:textColor="#03A9F4"
-            android:textSize="20sp" />
-
-        <EditText
-
-            android:id="@+id/editTextCorreoElectronico"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="15dp"
-            android:ems="10"
-            android:hint="@string/txeIntroducirNombre"
-            android:inputType="textPersonName"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="15dp"
-            android:gravity="center"
-            android:text="@string/txvIntroduceLaContraseña"
-            android:textColor="#2196F3"
-            android:textSize="20sp" />
-
-        <EditText
-            android:id="@+id/editTextContraseña"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="15dp"
-            android:ems="10"
-            android:gravity="start|top"
-            android:hint="@string/txeIntroducirContraseña"
-            android:inputType="textMultiLine"
-            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/textView4"
