--- a/app/src/main/res/layout/activity_registro_view.xml
+++ b/app/src/main/res/layout/activity_registro_view.xml
@@ -48,6 +48,20 @@
             android:textSize="20sp" />
 
         <EditText
+            android:id="@+id/editTextCorreoElectronico"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="50dp"
+            android:ems="10"
+            android:hint="Introduce un correo electronico valido"
+            android:textColorHint="@color/black"
+            android:inputType="textEmailAddress" />
+
+        <EditText
             android:id="@+id/editTextContraseña"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
