--- a/app/src/main/res/layout/activity_carrito_de_compras_view.xml
+++ b/app/src/main/res/layout/activity_carrito_de_compras_view.xml
@@ -39,4 +39,16 @@
         app:backgroundTint="#152A8D"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerViewCarrito" />
+
+    <TextView
+        android:id="@+id/tvTotal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="168dp"
+        android:text="TextView"
+        android:textColor="#FDFCFC"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
